docs/tests/nameres/control_flow/valid/SwitchNoCase.src
// Valid 

fn void main() {
    let int i = 0;
    switch (i) {
        default {
            i++;
        }
    }
}