docs/tests/nameres/control_flow/invalid/SwitchCaseDoesntExist.src
// Invalid 

fn void main() {
    let int i  = 0;
    switch (i) {
        case j {

        }
        case true {

        }
        case null {
            
        }
    }
}